$Id: History,v 1.12 2010/07/09 10:24:40 $
-------------------------------------------------------------------

     =========================================================
                          Simpit
     =========================================================

                    Simpit History file
                    ------------------------

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     